@@ -14,7 +14,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: var.test,v 1.28 2007/03/12 18:06:14 dgp Exp $
+# RCS: @(#) $Id: var.test,v 1.29 2007/11/23 21:19:51 hobbs Exp $
 #
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -679,6 +679,10 @@ test var-13.1 {Tcl_UnsetVar2, unset array with trace set on element} {
 test var-14.1 {array names syntax} -body {
     array names foo bar baz snafu
 } -returnCodes 1 -match glob -result *
+
+test var-14.2 {array names -glob} -body {
+    array names tcl_platform -glob os
+} -returnCodes 0 -match exact -result os
 
 test var-15.1 {segfault in [unset], [Bug 735335]} {
     proc A { name } {
